# Trinex-Engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build-win.sh  build.bat  build.sh  config.json  engine_loop.scxml  launch.sh  out.txt  render_doc.cap  scenemodel.qmodel
editor/: CMakeLists.txt
editor/include/: blueprints.hpp  editor_config.hpp  editor_resources.hpp  editor_scene_renderer.hpp  icons.hpp  shader_compiler.hpp  theme.hpp
editor/include/Clients/: editor_client.hpp  imgui_client.hpp  material_editor_client.hpp  object_view_client.hpp  open_client.hpp  pipeline_editor_client.hpp  script_debuger.hpp  script_debuger_client.hpp  static_mesh_client.hpp  texture_editor_client.hpp
editor/include/Core/: blueprints.hpp  editor_config.hpp  editor_resources.hpp  icons.hpp  imgui_config.hpp  importer.hpp  shader_compiler.hpp  theme.hpp
editor/include/Editor/: engine.hpp
editor/include/Graphics/: editor_pipelines.hpp  editor_render_passes.hpp  editor_scene_renderer.hpp  imgui.hpp  slang_material_compiler.hpp  slang_shader_compiler.hpp  visual_material.hpp  visual_material_graph.hpp  visual_material_nodes.hpp
editor/include/Importer/: importer.hpp
editor/include/PropertyRenderers/: special_renderers.hpp
editor/include/UI/: api.hpp  backend.hpp  client.hpp  core.hpp  imgui.hpp  menu_bar.hpp  primitives.hpp  property_renderer.hpp  rml.hpp  style.hpp  theme.hpp  types.hpp  widget.hpp
editor/include/Widgets/: content_browser.hpp  file_dialog.hpp  imgui_menu_bar.hpp  imgui_windows.hpp  mesh_preview.hpp  properties_window.hpp  property_renderer.hpp
editor/libs/: CMakeLists.txt
editor/libs/IconFont/: .IconsLucide.h.kate-swp
editor/libs/ImAnim/: CMakeLists.txt
editor/libs/ImGuiTextEditor/: CMakeLists.txt  TextEditor.cpp
editor/libs/ImGuizmo/: CMakeLists.txt
editor/libs/ImViewGuizmo/: CMakeLists.txt  LICENSE  README.md
editor/libs/RmlUi/: CMakeLists.txt
editor/libs/assimp/: CMakeLists.txt
editor/libs/imgui/: CMakeLists.txt
editor/libs/imgui-filebrowser/: CMakeLists.txt
editor/libs/imgui-node-editor/: CMakeLists.txt
editor/libs/slang/: CMakeLists.txt
editor/libs/tinygltf-2.9.6/: CMakeLists.txt  tiny_gltf.cc
editor/resources_internal/: AxisMaterial.tasset  BlueprintBackground.tasset  DefaultIcon.tasset  DefaultSampler.tasset  GridMaterial.tasset  PointLightOverlay.tasset  SpotLightOverlay.tasset
editor/src/: CMakeLists.txt  blueprints.cpp  config.cpp  editor_scene_renderer.cpp  icons.cpp  init.cpp  main.cpp  shader_compiler.cpp  theme.cpp
editor/src/Clients/: imgui_client.cpp  imgui_debug.cpp  object_view_client.cpp  open_client.cpp  pipeline_editor_client.cpp  reflection_inspector.cpp  script_debugger_client.cpp  static_mesh_client.cpp  texture_editor_client.cpp
editor/src/Core/: bind_imgui.cpp  blueprints.cpp  config.cpp  icons.cpp  imgui_bindings.cpp  imgui_config.cpp  importer.cpp  shader_compiler.cpp  theme.cpp
editor/src/DefaultResources/: editor.hpp
editor/src/Editor/: engine.cpp
editor/src/Graphics/: editor_pipelines.cpp  editor_render_passes.cpp  editor_scene_renderer.cpp  imgui.cpp  slang_material_compiler.cpp  slang_shader_compiler.cpp  visual_material.cpp  visual_material_graph.cpp  visual_material_graph_bindings.cpp  visual_material_nodes.cpp
editor/src/Importer/: importer.cpp
editor/src/PropertyRenderers/: material_properties.cpp  pipeline_properties.cpp  primitive_component_properties.cpp  scene_component_properties.cpp  static_mesh_properties.cpp  texture2d_properties.cpp
editor/src/UI/: api.cpp  api_controls.cpp  api_draw.cpp  api_internal.cpp  api_internal.hpp  api_navigation.cpp  api_platform.cpp  api_rendering.cpp  api_style.cpp  api_windows.cpp  backend.cpp  client.cpp  imgui.cpp  menu_bar.cpp  primitives.cpp  property_renderer.cpp  rml.cpp  theme.cpp  types.cpp  widget.cpp
editor/src/Widgets/: content_browser.cpp  file_dialog.cpp  imgui_menu_bar.cpp  imgui_windows.cpp  material_parameters.cpp  mesh_preview.cpp  properties_window.cpp  property_renderer.cpp
libs/: .CMakeLists.txt.kate-swp  CMakeLists.txt
libs/SDL/include/: SDL_config.h
libs/angelscript/: CMakeLists.txt
libs/angelscript/include/: angelscript.h  angelscript_object.h  scriptany.h  scriptarray.h  scriptfilesystem.h
libs/angelscript/source/: as_builder.cpp  as_builder.h  as_bytecode.cpp  as_callfunc_arm_gcc.S  as_callfunc_x64_gcc.cpp  as_compiler.cpp  as_compiler.h  as_config.h  as_context.cpp  as_context.h  as_datatype.cpp  as_gc.cpp  as_generic.cpp  as_generic.h  as_globalproperty.cpp  as_objecttype.cpp  as_objecttype.h  as_parser.cpp  as_parser.h  as_property.h  as_restore.cpp  as_scriptengine.cpp  as_scriptengine.h  as_scriptfunction.cpp  as_scriptnode.h  as_scriptobject.cpp  as_scriptobject.h  as_texts.h  as_tokendef.h  as_typeinfo.cpp  as_typeinfo.h
libs/imgui/: CMakeLists.txt
libs/imgui-node-editor/: CMakeLists.txt
libs/imgui-node-editor/include/: imgui_node_editor.h
libs/imgui/include/: imgui_freetype.h  imgui_internal.h
libs/libzip/lib/: CMakeLists.txt
libs/stb/: CMakeLists.txt
libs/tlsf/: CMakeLists.txt  LICENSE
libs/tlsf/src/: tlsf.cpp
libs/tracy/: CMakeLists.txt  TracyClient.cpp
libs/zlib/: CMakeLists.txt
src/Engine/: CMakeLists.txt  Init.cpp  aabb.cpp  basic_functional.cpp  camera_view.cpp  compile_shaders.py  configure.py  configure_shaders.py  default_client.cpp  enums.cpp  fix_atribute_warnings.sh  font.cpp  frustum.cpp  level.cpp  octree.cpp  project.cpp  ray.cpp  scene.cpp  scene_view.cpp  scene_view_state.cpp  settings.cpp  splash_config.cpp  splash_screen.cpp  world.cpp
src/Executable/: Application.cpp  CMakeLists.txt  GUI.cpp  GameInit.cpp  application_debug.cpp  camera.cpp  example_window.cpp  glsl_compiler_test.cpp  hello_triangle.cpp  main.cpp  render_ui.cpp  save.cpp  test.cpp  test_camera.cpp  test_object.cpp  viewport_client.cpp
src/RHI/: CMakeLists.txt  context.cpp  enums.cpp  handles.cpp  initializers.cpp  object.cpp  pipeline.cpp  readback.cpp  resource_ptr.cpp  rhi_initializers.cpp  static_sampler.cpp  structures.cpp  upload.cpp  upload_allocator.cpp
(+2484 files in other folders)
